--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "build": "webpack"
+    "build": "webpack",
+    "build-prod": "webpack --config webpack.prod.config.js"
   },
   "keywords": [],
   "author": "",
